Coming Soon holding page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Barry Mackie-Conlon | Product Designer| UX Strategy, Accessibility & AI</title>
+       <link rel="stylesheet" href="src/css/styles.css">
     </head>
 
     <body>
-      <div id="root">Hello</div>
+      <div id="root">
+        <video autoplay muted loop id="comingSoonVideo">
+          <source src="src/video/textr-2025-12-22_16-22-2.mp4" type="video/mp4">
+        </video>
+      </div>
     </body>
   </html>
   
